--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -26,8 +26,8 @@
 						<span class= "artist-show-span-name-kana">/<%= @artist.name_kana %></span>
 						<span class= "artist-show-span-name">】</span>
 					</p>
-					<p class="artist-show-member"><span class="glyphicon glyphicon-headphones artist-show-music-icon" aria-hidden="true"></span><span class= "bold">  Member</span><br><%= @artist.member %>メンバーメンバー・・・ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
-					<p class="artist-show-introducton"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span><span class= "bold">  アーティスト紹介</span><br>フレームワークでは，この位置が「アーティスト紹介」となっていますが，Artistsモデルにintroductionカラムはありません．紹介を書くtext_area作りますか？ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+					<p class="artist-show-member"><span class="glyphicon glyphicon-headphones artist-show-music-icon" aria-hidden="true"></span><span class= "bold">  Member</span><br><%= @artist.member %></p>
+					<p class="artist-show-introducton"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span><span class= "bold">  アーティスト紹介</span><br><%= @artist.introduction %></p>
 				</div>
 			</div>
 
