--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -79,11 +79,17 @@
 	border: solid 0.8px lightgray;
 	h4 {
 		text-align: center;
-		padding: 20px 0px;
+		padding: 15px 0px;
 		margin-top: 0px;
 		border-bottom: solid 0.8px lightgray;
-		background-color: #EFFBFB;
+		background-color: #000;
+		color: yellow;
+		font-weight: 700;
 	}
+}
+
+.ranking-title {
+	font-size: 40px;
 }
 
 #sold_out {
