--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -57,7 +57,7 @@
 	<!-- ランキング -->
 			<div class="col-xs-4">
 				<div class="ranking">
-					<h4> 累計売り上げランキング TOP10</h4>
+					<h4> 累計売り上げランキング<br>	<span class="ranking-title">TOP10</span></h4>
 					<div class="ranking-rank">
 						<li>1</li>
 						<%= image_tag 'rank1.png', class:"rank1" %>
