--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -170,10 +170,12 @@
 }
 
 .ranking-product-image{
+	width: 40%;
 	float: left;
 }
 
 .ranking-artist-name{
+	width: 60%;
 	float: left;
 	padding: 10px 0 0 15px;
 }
