--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -40,7 +40,8 @@
   <%= f.text_field :label, class: "" %>
 
   <h4> ジャンル</h4>
-  <%= f.text_field :genre, class: "" %>
+  <%= f.select :genre, Product.genres.keys %>
+  <!-- "product.rb"にenumのリストを記述 -->
 
   <h4> 在庫数</h4>
   <%= f.text_field :stock, class: "" %>
