--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -301,3 +301,24 @@
 	margin: 0 40%;
 	width: 20%;
 }
+
+/* history */
+
+.users-status-description {
+	width: 70%;
+	border: solid 0.5px #A4A4A4;
+	border-radius: 10px;
+	padding: 10px;
+	margin-bottom: 30px;
+}
+
+.users-history-text {
+	color: red;
+	font-size: 20px;
+	font-weight: bold;
+	list-style: none;
+	padding: 40px 0;
+}
+
+.text-button {
+}
