--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -42,7 +42,7 @@
                 <p>数量：<%= f.number_field :quantity, value: c.quantity.to_i, min: 1 %></p>
                 <%= f.hidden_field :product_id, value: c.product_id %>
                 <%= f.hidden_field :status, value: '商品準備中' %>
-                <%= f.submit "数量を更新", class: "btn btn-warning btn-xs" %>
+                <%= f.submit "数量を更新", class: "btn btn-warning btn-xs btn" %>
                 <%= link_to 'カートから削除する',({controller: 'cart_items', action: 'destroy_item', id: c.id }), method: :delete %>
               <% end %>
             </div>
