--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the admins controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.admin-aicon {
+  color: #666;
+}
+
+input[type="email"] {
+        width: 250px;
+        height: 35px;
+    }
+
+input[type="password"] {
+        width: 250px;
+        height: 35px;
+    }
