--- a/app/views/admins/user_index.html.erb
+++ b/app/views/admins/user_index.html.erb
@@ -1,4 +1,4 @@
-<h1>Admins#user_index!</h1>
+<h1>ユーザー一覧</h1>
 
 <%= form_tag("user_index", :method => 'get' ) do %>
 	<%= text_field_tag :search, params[:search] %>
