--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -16,11 +16,11 @@ input[type="password"] {
         height: 35px;
 }
 
-h1 {
+h1.admin {
   background: linear-gradient(transparent 70%, #f8b862 70%);
 }
 
-h3 {
+h3.admin {
   background: linear-gradient(transparent 70%, #a7d6ff 70%);
   font-size: 20px;
 }
