--- a/app/views/admins/user_index.html.erb
+++ b/app/views/admins/user_index.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー一覧</h1>
+<h1 class="admin">ユーザー一覧</h1>
 
 <%= form_tag("user_index", :method => 'get' ) do %>
 	<%= text_field_tag :search, params[:search] %>
@@ -8,9 +8,12 @@
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
-      <th>image</th>
       <th>id</th>
-      <th>name</th>
+      <th>名前</th>
+      <th>住所</th>
+      <th>電話番号</th>
+      <th>メールアドレス</th>
+      <th>退会</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,16 +21,25 @@
 <% @users.each do |user| %>
 <tr>
   <td>
-	<%= attachment_image_tag user, :profile_image, :fill, 40, 40, fallback: "sample-author1.jpg" %>
+    <%= user.id %>
   </td>
   <td>
-	id : <%= user.id %>
+    <%= link_to user_path(user) do %>
+      <%= user.name %>
+    <% end %>
   </td>
   <td>
-	id : <%= user.name %>
+    <%= user.postal_code %> /
+    <%= user.user_address %>
   </td>
   <td>
-<%= link_to "Show", user_path(user.id), class: "user_#{user.id}" %>
+    <%= user.phone_number %>
+  </td>
+  <td>
+    <%= user.email %>
+  </td>
+  <td>
+    <%= user.deleted_at %>
   </td>
 <% end %>
 </tbody>
