add admin layout2

--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -18,6 +18,7 @@ input[type="password"] {
 
 h1.admin {
   background: linear-gradient(transparent 70%, #f8b862 70%);
+  margin : 10px 5px 20px 5px;
 }
 
 h3.admin {
