--- a/app/views/admins/user_history.html.erb
+++ b/app/views/admins/user_history.html.erb
@@ -1,6 +1,6 @@
-
-<h1>ユーザー購入履歴一覧</h1>
-
+<div class="text-center">
+  <h1 class="admin">ユーザー購入履歴一覧</h1>
+</div>
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
@@ -81,3 +81,5 @@
     <% end %>
   </tbody>
 </table>
+
+<%= paginate @histories, class: "paginate" %>
