--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,40 +1,56 @@
-<h1>Users#edit</h1>
+<div class="user-edit">
+  <h1 class="user-edit-title">ユーザー情報編集</h1>
 
-<%= form_for(@user) do |f| %>
+  <%= form_for(@user) do |f| %>
+    <div class="user-edit-box">
+        <div class="field">
+          <%= f.label :ご氏名 %><br />
+          <%= f.text_field :name, autocomplete: "ご氏名", class:"edit-input" %>
+        </div>
 
-    <div class="form-group has-icon">
-        <h3>Name</h3>
-        <%= f.text_field :name %>
+        <div class="field">
+          <%= f.label :ご氏名ふりがな %><br />
+          <%= f.text_field :name_kana, autocomplete: "ご氏名ふりがな", class:"edit-input" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :ユーザ名 %><br />
+          <%= f.text_field :hundle_name, autocomplete: "ユーザ名", class:"edit-input" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :電話番号 %><br />
+          <%= f.text_field :phone_number, autocomplete: "電話番号", class:"edit-input" %>
+        </div>
+    </div>
+    <div class="user-edit-box">
+        <div class="field">
+          <%= f.label :メールアドレス %><br />
+          <%= f.text_field :email, autocomplete: "メールアドレス", class:"edit-input" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :郵便番号 %><br />
+          <%= f.text_field :postal_code, autocomplete: "郵便番号", class:"edit-input" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :ご住所 %><br />
+          <%= f.text_field :user_address, autocomplete: "ご住所", class:"edit-input" %>
+        </div>
+
+        <div class="field">
+            <%= f.label :プロフィール画像 %><br />
+            <%= f.attachment_field :profile_image %>
+        </div>
     </div>
 
-    <div class="form-group has-icon">
-        <h3>image</h3>
-        <%= f.attachment_field :profile_image %>
+    <div class="actions">
+      <%= f.submit "変更を保存", class:"edit-button" %>
     </div>
+  <% end %>
+</div>
 
-    <div class="form-group has-icon">
-        <h3>Name_kana</h3>
-        <%= f.text_field :name_kana %>
-    </div>
-
-    <div class="form-group has-icon">
-        <h3>hundle_name</h3>
-        <%= f.text_field :hundle_name %>
-    </div>
-
-    <div class="form-group has-icon">
-        <h3>postal_code</h3>
-        <%= f.text_field :postal_code %>
-    </div>
-
-    <div class="form-group has-icon">
-        <h3>user_address</h3>
-        <%= f.text_field :user_address %>
-    </div>
-
-    <div class="form-group has-icon">
-        <h3>email</h3>
-        <%= f.text_field :email %>
-    </div>
-    <%= f.submit "変更を保存", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
-<% end %>
+<li class="delete">
+    <%= link_to " 退会する", user_path, method: :delete, class: "edit_user_#{current_user.id}" %>
+</li>
