--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,80 +1,109 @@
-<div class="container">
-	<div class="row">
-		<div class="col-xs-8">
-			<!-- ユーザー情報 -->
-			<% if user_signed_in? %>
-			<ul class="users">
-    		<%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, fallback: "sample-author1.jpg" %>
-			</ul>
-			<ul class="users">name : <%= current_user.name %></ul>
-			<ul class="users">name_kana : <%= current_user.name_kana %></ul>
-			<ul class="users">hundle_name : <%= current_user.hundle_name %></ul>
-			<ul class="users">postal_code : <%= current_user.postal_code %></ul>
-			<ul class="users">user_address : <%= current_user.user_address %></ul>
-			<ul class="users">email : <%= current_user.email %></ul>
+<% if user_signed_in? %>
 
-			<%= link_to " 登録情報編集", edit_user_path(current_user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{current_user.id}" %><br>
-			<%= link_to " 退会する", user_path, method: :delete, class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{current_user.id}" %>
-				<h3> お気に入りに入れたCD </h3>
-				<table class='table table-hover table-inverse'>
-  					<thead>
-					    <tr>
-					      <th>image</th>
-					      <th>name</th>
-					      <th colspan="3"></th>
-					    </tr>
-					</thead>
-					<tbody>
-				<% @favorites.each do |favorite| %>
-				<tr>
-				  <td>
-					<%= attachment_image_tag favorite.product, :image, size: "70x70" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
-				  </td>
-				  <td>
-					<%= favorite.product.name %>
-				  </td>
-				<% end %>
-					</tbody>
-				</table>
-				<%= paginate @favorites, class: "paginate" %>
-		</div>
-            <% elsif admin_signed_in? %>
-            <h1>管理者用情報</h1>
-    		<%= attachment_image_tag @user_admin, :profile_image, :fill, 100, 100, fallback: "sample-author1.jpg" %>
-			</ul>
-			<ul class="users">name : <%= @user_admin.name %></ul>
-			<ul class="users">name_kana : <%= @user_admin.name_kana %></ul>
-			<ul class="users">hundle_name : <%= @user_admin.hundle_name %></ul>
-			<ul class="users">postal_code : <%= @user_admin.postal_code %></ul>
-			<ul class="users">user_address : <%= @user_admin.user_address %></ul>
-			<ul class="users">email : <%= @user_admin.email %></ul>
-
-			<%= link_to " 登録情報編集", edit_user_path(@user_admin.id), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %><br>
-			<%= link_to " 退会する", user_path, method: :delete, class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
-				<h3> お気に入りに入れたCD </h3>
-				<table class='table table-hover table-inverse'>
-  					<thead>
-					    <tr>
-					      <th>image</th>
-					      <th>name</th>
-					      <th colspan="3"></th>
-					    </tr>
-					</thead>
-					<tbody>
-				<% @favorites.each do |favorite| %>
-				<tr>
-				  <td>
-					<%= attachment_image_tag favorite.product, :image, size: "70x70" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
-				  </td>
-				  <td>
-					<%= favorite.product.name %>
-				  </td>
-				<% end %>
-					</tbody>
-				</table>
-				<%= paginate @favorites, class: "paginate" %>
-		</div>
-            <% end %>
+<div class="width-80">
+	<div class="user-show-left">
+		<%= attachment_image_tag current_user, :profile_image, size: "100%",class:"user-show-image", fallback: "sample-author1.jpg" %>
+		<div class="user-show-button">
+			<%= link_to " 登録情報管理画面", edit_user_path(current_user), class: "col-xs-12 btn btn-default user-show-edit-button" %>
+			<%= link_to " 送付先一覧", addresses_show_path(current_user), class: "col-xs-12 btn btn-default user-show-address-button" %>
 		</div>
 	</div>
+	<div class="user-show-right">
+		<div class="user-show-table">
+			<table class= "table">
+			    <tr>
+			        <th>ご氏名</th>
+			        <td><%= current_user.name %></td>
+			    </tr>
+			    <tr>
+			        <th>ご氏名（かな）</th>
+			        <td><%= current_user.name_kana %></td>
+			    </tr>
+			    <tr>
+			        <th>ユーザ名</th>
+			        <td><%= current_user.hundle_name %></td>
+			    </tr>
+			    <tr>
+			        <th>ご住所</th>
+			        <td><%= current_user.postal_code %></td>
+			    </tr>
+			    <tr>
+			        <th>電話番号</th>
+			        <td><%= current_user.user_address %></td>
+			    </tr>
+			    <tr>
+			        <th>メールアドレス</th>
+			        <td><%= current_user.email %></td>
+			    </tr>
+			</table>
+		</div>
+	</div>
+
+	<div class="clearfix"></div>
+
+	<h3> お気に入りに入れたCD </h3>
+	<table class='table table-hover table-inverse'>
+	  	<thead>
+			<tr>
+				<th>image</th>
+				<th>name</th>
+				<th colspan="3"></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @favorites.each do |favorite| %>
+				<tr>
+					<td>
+						<%= attachment_image_tag favorite.product, :image, size: "70x70" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
+					</td>
+					<td>
+						<%= favorite.product.name %>
+					</td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
+	<%= paginate @favorites, class: "paginate" %>
 </div>
+
+<% elsif admin_signed_in? %>
+
+	<div class="width-80">
+		<h1>管理者用情報</h1>
+		<div class="user-show-image">
+		    <%= attachment_image_tag @user_admin, :profile_image, :fill, 100, 100, fallback: "sample-author1.jpg" %>
+		</div>
+		<ul class="users">name : <%= @user_admin.name %></ul>
+		<ul class="users">name_kana : <%= @user_admin.name_kana %></ul>
+		<ul class="users">hundle_name : <%= @user_admin.hundle_name %></ul>
+		<ul class="users">postal_code : <%= @user_admin.postal_code %></ul>
+		<ul class="users">user_address : <%= @user_admin.user_address %></ul>
+		<ul class="users">email : <%= @user_admin.email %></ul>
+
+		<%= link_to " 登録情報編集", edit_user_path(@user_admin.id), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %><br>
+		<%= link_to " 退会する", user_path, method: :delete, class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+		<h3> お気に入りに入れたCD </h3>
+		<table class='table table-hover table-inverse'>
+		  	<thead>
+				<tr>
+					<th>image</th>
+					<th>name</th>
+					<th colspan="3"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @favorites.each do |favorite| %>
+					<tr>
+						<td>
+							<%= attachment_image_tag favorite.product, :image, size: "70x70" , format: 'jpeg', fallback: "no_image.jpg", class: "" %>
+						</td>
+						<td>
+							<%= favorite.product.name %>
+						</td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+		<%= paginate @favorites, class: "paginate" %>
+	</div>
+<% end %>
