--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -69,7 +69,7 @@
 	       <%= content_tag(:div, value, class: "#{key}") %>
 	    <% end %>
       	<% if h.status != '商品到着' %>
-	        <%= form_for h, :url => {:controller => :cart_items, :action => :update_item, :id => h.id}  do |f| %>
+	        <%= form_for h, :url => {:controller => :users, :action => :update_status, :id => h.id}  do |f| %>
 				<%= f.hidden_field :quantity, value: h.quantity %>
 				<%= f.hidden_field :product_id, value: h.product_id %>
 				<!-- CartItem modelにrestrict_status_userメソッドを定義し，特定の選択肢を除外 -->
