--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -74,9 +74,10 @@
 
 .ranking {
 	width: 100%;
-	height: 1120px;
+	height: 1150px;
 	margin-top: 30px;
 	border: solid 0.8px lightgray;
+	box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.5);
 	h4 {
 		text-align: center;
 		padding: 15px 0px;
