--- a/app/views/admins/user_index.html.erb
+++ b/app/views/admins/user_index.html.erb
@@ -46,7 +46,7 @@
     <%= user.email %>
   </td>
   <td>
-    <%= user.deleted_at %>
+    <%= user.deleted_at %><%= link_to " 退会させる",({controller: 'users', action: 'destroy', id: user.id }), method: :delete, class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
   </td>
 <% end %>
 </tbody>
